now it's actually working pretty well...

--- a/templates/pytest.ini
+++ b/templates/pytest.ini
@@ -1,8 +1,15 @@
-[options]
+[pytest]
+testpaths =
+		  tests
+addopts =
+		-Werror
+		--cov-config=coverage.ini
+		--cov=replaceWithPackageName
+		--cov-report
+		term-missing:skip-covered
+		--no-cov-on-fail
+		--import-mode=importlib
+
 required_plugins =
 				 pytest-cov
 				 pytest-mock
-
-addopts = -Werror --cov-config=coverage.ini --cov=replaceWithPackageName --cov-report term-missing:skip-covered --no-cov-on-fail
-
-testpaths = tests
