--- a/templates/setup.cfg
+++ b/templates/setup.cfg
@@ -26,4 +26,4 @@ exclude=# patterns, to, match
 project = replaceWithPackageName
 version = replaceWithVersionNumber
 release = replaceWithVersionNumber
-source-dir = sphinx/source
+source-dir = sphinx
